== 0.3.2 / 2008-11-08

* Minor enhancements

  * Fixes behavior or have_tag when a block is passed. It passes the matched node(s) to the block for further specs again. (Carl Lerche)
  
== 0.3.1 / 2008-11-07

  * Minor enhancements

    * Use @_webrat_session instance variable instead of @session for Merb integration to avoid collisions

== 0.3.0 / 2008-11-07

* Major enhancements

  * Added Merb support (Gwyn Morfey, Jeremy Burks, Rob Kaufman, Yehuda Katz)
  * Added experimental Selenium support (Luke Melia)
  * Add have_selector, have_xpath, have_tag and contain matchers from Merb
  * Switch from Hpricot to Nokogiri for XML parsing (thanks, Aaron Patterson)
  
* Minor enhancements

  * Added #within for manipulating the current page within a selector scope
  * Add support for file fields via #attaches_file method (Rails only at the moment) (Kyle Hargraves)
  * Add support for simulating SSL requests (Luke Melia)
  * Added #basic_auth(user, pass) to support HTTP Basic Auth (Aslak Hellesøy)
  * Added support for Sinatra and Rack (Aslak Hellesøy)
  * Rename visits to visit, fills_in to fill_in, etc.
  * Add #field_labeled for looking up form fields by label (David Chelimsky)
  * Add #field_named and #field_with_id locators
  * Don't depend on hoe anymore
  * Return responses after sending requests
  * Allow clicking links and buttons by a regular expression in Selenium (Luke Melia)
  * Allow clicking links by a regular expression
  * Add #http_accept for including MIME type HTTP "Accept" headers (Ryan Briones)
  * Add #header to support inclusion of custom HTTP headers (Ryan Briones)
  * Consider response codes 200-499 as successful enough to not raise a Webrat error (David Leal)
  * Add Webrat.root method for cross-framework support (Krzysztof Zylawy)
  * Add support for clicking areas of an image map (Alex Lang)
  * Support relative links, including href="?foo=bar" (Kyle Hargraves)