@@ -1,3 +1,9 @@
+== Trunk
+
+* Minor enhancements
+
+  * Raise Webrat::PageLoadError when a failure occurs so that application exceptions can be more accurately tested (Ryan Briones)
+
 == 0.3.2 / 2008-11-08
 
 * Minor enhancements
